# C-Lessons-first-year

./: .gitignore  README.md
2nd Semester Materials/: CMakeLists.txt  MyForward.h  SimpleBuffer.h  exceptions.h  guarantees.h  iterators.h  main.cpp  structure_bindings.cpp  task2.cpp  templates.h
2nd Semester Materials/Iterators/: HomeTask.md  MyForwardIterator.h  iterators.h  iterators.md  main.cpp
2nd Semester Materials/exceptions/: SimpleBuffer.h  exceptions.md
Lesson Materials/Lesson 1/: C++_Урок_1.pptx  FirstLesson.md  task_h.cpp  test_echo.sh
Lesson Materials/Lesson 2/: SecondLesson.md  task_b.cpp  task_h.cpp
Lesson Materials/Lesson 3/: Alloc_Realloc_MemCpy_example.cpp  C_StyleArray_with_new_example.cpp
Lesson Materials/Lesson 4/: homework.cpp  memory_allocation.md  seminar.cpp  test.cpp
Lesson Materials/Lesson 5/: Git_Guide_Lesson5.md  Git_Windows  Lesson5.md
Lesson Materials/Lesson 6/: Templates.md  Templates_And_Classes.md  homework2.cpp
Lesson Materials/Lesson 7/: OOP.md  stack.h
Lesson Materials/Lesson 8/: final_stack.h  move.md  move_test.cpp
Lesson Materials/Lesson 9/: Debug.md
